fondo de inicio y fin

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       <!-- Momento 0 - Portada -->
       <section>
         <article>
-          <h1>#Radar<mark>Cultural</mark></h1>
-          <h4><mark>Una agenda cultural, hecha por todxs.</mark></h4>
+          <div class="background-principal">
+            <h1>#Radar<mark>Cultural</mark></h1>
+            <h4><mark>Una agenda cultural, hecha por todxs.</mark></h4>
+          </div>
         </article>
       </section>
 
@@ -520,6 +522,9 @@
               <div class="background-radar-espacios-view">
                 <div>
                   </div>
+                  <footer class="box">
+                    <h5>todos los espacios culturales en un solo lugar</h5>
+                  </footer>
               </div>
             </article>
             <article>
@@ -722,17 +727,17 @@
               <h5><mark>con las que se relaciona radar</mark></h5>
             </header>
               <div>
-                <ul data-step="fade" class="lateral-izquierda">
-                  <li>
-                    <span class="column">
-                      <img data-step="fade" src="assets/image/in-api-we-trust.png" class="size_400"/>
-                    </span>
-                  </li>
-                </ul>
                 <ul data-step="fade" class="lateral-derecha">
                   <li>API de google</li>
                   <li>API de facebook</li>
                   <li>API de twitter</li>
+                </ul>
+                <ul data-step="fade" class="lateral-izquierda">
+                  <li>
+                    <span class="column">
+                      <img src="assets/image/in-api-we-trust.png" class="size_400"/>
+                    </span>
+                  </li>
                 </ul>
                 <ul data-step="fade">
                   <li>
@@ -793,16 +798,16 @@
                 <br />
                 <li data-step="zoom">
                   <span class="column">
-                    <h5>aplicación Android</h5>
+                    <h4>aplicación Android</h4>
                   </span>
                 </li>
                 <li data-step="zoom">
                   <span class="column">
-                    <h5>Gestión de Auspiciantes</h5>
+                    <h4>Gestión de Auspiciantes</h4>
                   </span>
                 </li><li data-step="zoom">
                   <span class="column">
-                    <h5>Difusión</h5>
+                    <h4>Difusión</h4>
                   </span>
                 </li>
               </ul>
@@ -827,6 +832,10 @@
                   <span class="column">
                     <h5><mark>con una pregunta menos los domingos</mark></h5>
                 </li>
+                <li data-step="fade">
+                  <span class="column">
+                    <h5><mark>¿nos vamos a festejar?</mark></h5>
+                </li>
               </ul>
             </div>
             <footer class="box white">
@@ -834,13 +843,13 @@
             </footer>
           </article>
           </section>
-
-
           <section>
-              <article>
-  				<h1><<mark>/Fin</mark>></h1>
-  				<h4>[ Gracias totales ]</h4>
-              </article>
+            <article>
+              <div class="background-principal">
+                <h1><<mark>/Fin</mark>></h1>
+                <h4>[ Gracias totales ]</h4>
+              </div>
+            </article>
           </section>
       <script src="assets/javascript/QuoJS.js"></script>
       <script src="assets/javascript//raf.js"></script>
