imagen de fondo2

--- a/index.html
+++ b/index.html
@@ -448,11 +448,12 @@
         <!-- MVC en el Servidor y en el Cliente -->
         <section data-color="red" data-color="image">
           <article>
-            <div>
+            <div class="background-principal">
                 <ul>
-                  <li>
+                  <li><br>
                     <h2>Radar Cultural</h2>
-                    <h3>veamos como funciona</h3>
+                    <h3>veamos como funciona</h3><br>
+                    <h3>www.radarcultural.org</h3>
                   </li>
                 </ul>
               </div>
@@ -848,6 +849,7 @@
               <div class="background-principal">
                 <h1><<mark>/Fin</mark>></h1>
                 <h4>[ Gracias totales ]</h4>
+                <h3>www.radarcultural.org</h3>
               </div>
             </article>
           </section>
